@@ -479,3 +479,4 @@ in 0.1.13.
 0.1.34
 ------
 - Fix bug in ManualBeamFinder
+- Fix bug in refnx GUI regarding checkbox selection.
